@@ -2,6 +2,12 @@
 # Copyright 2002-2009 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
 # Distributed under the GPL v2
 
+  11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
+  modules/catalyst/support.py, modules/catalyst/target/generic_stage.py,
+  modules/catalyst/target/livecd_stage2.py, modules/catalyst/util.py:
+  Replace catalyst.support.read_from_clst() with catalyst.util.readfile()
+  and update references
+
   11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org> catalyst,
   modules/catalyst/util.py:
   Modify global import from catalyst.support to just import what's needed
